# Nene-bot

./: .env  .env.dev  .env.prod  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  matcher_path.py  pyproject.toml  requirement.txt  requirements.txt  test_init.py
.github/workflows/: test-python-dependencies.yml
nene/plugins/: models.py  sign.py
nene/plugins/nene_init/: __init__.py
nene/plugins/nonebot-plugin-dailysign/: __init__.py  data_source.py
nene/plugins/nonebot-plugin-shindan/: __init__.py  manager.py  model.py  onebot.py  shindanmaker.py
nene/plugins/nonebot_plugin_dailysign/: __init__.py
nene/plugins/nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  download.py  utils.py
nene/plugins/nonebot_plugin_groupmate_waifu/: __init__.py  config.py  init.py  utils.py
nene/plugins/nonebot_plugin_kook_intimac/: __init__.py
nene/plugins/nonebot_plugin_memes/: __init__.py  depends.py  manager.py  rule.py  utils.py
nene/plugins/nonebot_plugin_memes/data_source/: __init__.py  image_source.py  user_id.py  user_info.py
nene/plugins/nonebot_plugin_random/: __init__.py  depends.py  download.py  matchers.py  models.py  utils.py
nene/plugins/nonebot_plugin_shindan/migrations/: 02bb36c59899_init_db.py
nene/plugins/nonebot_plugin_txt2img/: __init__.py  config.py  txt2img.py
nene/utils_/: __init__.py  event.py  models.py  usrinfo.py  utils.py
nene/utils_/sql/: __init__.py  bind.py  sign.py
src/plugins/l4d2/nonebot_plugin_l4d2_server/: __init__.py
src/plugins/nonebot_plugin_fortune/: __init__.py
src/plugins/utils/: event.py  usrinfo.py
src/plugins/utils_/: class.py  event.py  replace.py  usrinfo.py
src/utils_/: models.py
