[tool.poetry]
name = "Nene"
version = "2.0.0"
description = "跨适配器的通用全功能机器人"
authors = ["Agnes Digital <Z735803792@163.com>"]
license = "AGPL"
readme = "README.md"
homepage = "https://github.com/Agnes4m/Nene-bot"
repository = "https://github.com/Agnes4m/Nene-bot"

[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 89
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Agnes4m/Nene-bot/issues"

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple/'
priority = "default"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "开黑啦", module_name = "nonebot.adapters.kaiheila"},
    {name = "QQ 频道", module_name = "nonebot.adapters.qqguild"},
    {name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12"}
]
plugins = ["nonebot_plugin_apscheduler",
"nonebot_plugin_userinfo",
"nonebot-plugin-send-anything-anywhere"]
plugin_dirs = ["nene/plugins"]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-qqguild = "^0.2.3"
nonebot-adapter-kaiheila = "^0.2.8"
nonebot-adapter-onebot = "^2.2.3"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-send-anything-anywhere = "^0.2.7"
nonebot_plugin_userinfo = "0.0.2"
pillow = "^9.0.0"
httpx = "^0.24.0"
aiofiles = ">=0.8.0"
peewee = "^3.16.2"

[tool.poetry.scripts]
check = "pre-commit run --all-files"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^2.21.0"
pycln = "^2.1.2"
ruff = "^0.0.276"