[project]
name = "Nene"
version = "0.0.1"
description = "跨适配器的通用全功能机器人"
authors = [{name = "Agnes Digital , email = Z735803792@163.com"}]
readme = "README.md"
license = { text = "APGL" }
homepage = "https://github.com/Agnes4m/Nene-bot"
repository = "https://github.com/Agnes4m/Nene-bot"
requires-python = ">=3.9,<4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "开黑啦", module_name = "nonebot.adapters.kaiheila"},
    {name = "QQ 频道", module_name = "nonebot.adapters.qqguild"},
    {name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12"}
]
plugins = ["nonebot_plugin_apscheduler",
"nonebot_plugin_userinfo",
"nonebot-plugin-send-anything-anywhere"]
plugin_dirs = ["nene/plugins"]

[tool.pdm.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-qqguild = "^0.2.3"
nonebot-adapter-kaiheila = "^0.2.8"
nonebot-adapter-onebot = "^2.2.3"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-send-anything-anywhere = "^0.2.7"
nonebot_plugin_userinfo = "0.0.2"
nonebot-plugin-tortoise-orm = "0.1.0"
pillow = "^10.0.0"
httpx = "^0.24.0"
aiofiles = ">=0.8.0"
nonebot-plugin-datastore = "^1.0.0"
lxml = "^4.0.0"
Jinja2 = "^3.0.0"

[project.urls]
homepage = "https://github.com/Agnes4m/Nene-bot"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
pythonVersion = "3.8"

[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
# skip-string-normalization = true

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff]
ignore = [
    "B008",
    "B905",
    "E501",
    "FBT002",
    "PGH003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "N",
    "PIE",
    "PGH",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TRY",
]
