[project]
name = "Nene"
version = "0.0.1"
description = "跨适配器的通用全功能机器人"
authors = [{name = "Agnes Digital , email = Z735803792@163.com"}]
readme = "README.md"
license = { text = "APGL" }
homepage = "https://github.com/Agnes4m/Nene-bot"
repository = "https://github.com/Agnes4m/Nene-bot"
requires-python = ">=3.9,<4.0"
dependencies = [
    "nonebot2>=2.0.1",
    "nonebot-adapter-qqguild>=0.2.3",
    "nonebot-adapter-kaiheila>=0.2.8",
    "nonebot-adapter-onebot>=2.2.3",
    "nonebot-adapter-telegram>=0.1.0b14",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-plugin-send-anything-anywhere>=0.2.7",
    "nonebot_plugin_userinfo>=0.0.2",
    "nonebot-plugin-tortoise-orm>=0.1.0",
    "nonebot-plugin-htmlrender==0.2.0.3",
    "nonebot-plugin-apscheduler>=0.2.0",
    "nonebot-plugin-datastore>=1.0.0",
    "pillow>=9.0.0,<10.0.0",
    "aiofiles>=0.8.0",
    "lxml>=4.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.4",
    "jinja2>=3.0.0",
    "srctools>=2.3.9",
    "bs4==0.0.1",
    "httpx>=0.22.0",
    "rcon==2.1.0",
    "pyunpack>=0.3.0",
    "ruamel.yaml>=0.17.21",
    "rarfile>=4.0",
    "patool>=1.12",
    "python-a2s>=1.3.0",
    "amis-python>=1.0.6",
    "pandas>=1.5.2",
    "python-jose>=3.3.0",
    "gitpython>=3.1.27",
    "attrs>=23.1.0",
]
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "开黑啦", module_name = "nonebot.adapters.kaiheila"},
    {name = "QQ 频道", module_name = "nonebot.adapters.qqguild"},
    {name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12"}
]
plugins = ["nonebot_plugin_apscheduler",
"nonebot_plugin_saa",
"nonebot_plugin_userinfo",
"nonebot_plugin_htmlrender"]
plugin_dirs = ["nene/plugins"]

[project.urls]
homepage = "https://github.com/Agnes4m/Nene-bot"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
pythonVersion = "3.8"

[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
# skip-string-normalization = true

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff]
ignore = [
    "A003",
    "B008",
    "B905",
    "E402",
    "E501",
    "FBT002",
    "PGH003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "N",
    "PIE",
    "PGH",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TRY",
]
